--- a/level3.html
+++ b/level3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="inventory2.css">
     <link rel="stylesheet" href="game.css">
-    <title>Level 2</title>
+    <title>Level 3</title>
     <style>
         body {
             margin: 0;
@@ -238,9 +238,9 @@
     </div>
 
 <!-- Loading screen -->
-<!-- <div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center;">
+<div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center;">
     <p>Loading assets, please wait...</p>
-</div> -->
+</div> 
 
 
 <div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
@@ -255,12 +255,6 @@
 
     <!-- Import Three.js -->
      <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script> -->
-    <!-- Import OrbitControls from Three.js examples (this must be served correctly from your project or CDN) -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/examples/js/controls/OrbitControls.js"></script> -->
-    <!-- <script src="https://unpkg.com/three@0.152.0/examples/js/controls/OrbitControls.js"></script> -->
-     <!-- Only import more stuff for development like orbital controls.... else take it out of your commit -->
-    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
    
@@ -269,7 +263,7 @@
     <!-- Import your custom JavaScript file -->
     <script type="module" src="level3.js"></script>
     <script type = "module" src = "/inventory.js"> </script>
-    <!-- <script type = "module" src = "/level3Intro.js"> </script> -->
+    <script type = "module" src = "/level3Intro.js"> </script>
     
 </body>
 </html>
