--- a/level3.html
+++ b/level3.html
@@ -87,31 +87,6 @@
             margin: 10px;
         }
 
-        #startPiP {
-            display: none;
-    position: fixed;
-    top: 70px;           /* Position from the top */
-    left: 15px;          /* Position from the left */
-    padding: 10px 20px;  /* Add some padding for better appearance */
-    background-color: purple; /* Bootstrap primary color or any color you prefer */
-    color: white;        /* Text color */
-    border: none;        /* Remove border */
-    border-radius: 5px;  /* Rounded corners */
-    font-size: 16px;     /* Increase font size */
-    cursor: pointer;     /* Change cursor to pointer on hover */
-    transition: background-color 0.3s, transform 0.2s; /* Smooth transition for hover effects */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    z-index: 4;
-}
-
-#startPiP:hover {
-    background-color: violet; /* Darker shade for hover effect */
-    transform: scale(1.05); /* Slightly enlarge the button on hover */
-}
-
-#startPiP:active {
-    transform: scale(0.95); /* Shrink the button when pressed */
-}
 
 
         #catConversation {
@@ -243,14 +218,14 @@
 </div> 
 
 
-<!--<div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
+<div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
     <div id="dialogueBox" style="text-align: center; padding: 20px; background-color: rgba(0, 0, 0, 0.8); border: 2px solid white; border-radius: 10px; width: 50%;">
         <p id="dialogueText">The teleporter is broken! There is still away.</p>
         <div style="display: flex; justify-content: center; align-items: center">
         </div>
         <button id="nextButton" style="margin-top: 20px; padding: 10px 20px; font-size: 16px;">Next</button>
     </div>
-</div>-->
+</div>
 
 
     <!-- Import Three.js -->
@@ -261,9 +236,10 @@
    
 
     <!-- Import your custom JavaScript file -->
+    <script type = "module" src = "/level3Intro.js"> </script>
     <script type="module" src="level3.js"></script>
     <script type = "module" src = "/inventory.js"> </script>
-    <script type = "module" src = "/level3Intro.js"> </script>
+   
     
 </body>
 </html>
