--- a/level2.html
+++ b/level2.html
@@ -224,13 +224,26 @@
 
     <span id = "inventoryFull"></span>
 
+    <!-- Winning Modal -->
+<div id="winningModal_l2" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.8); z-index: 1000; justify-content: center; align-items: center;">
+    <div style="background-color: #b800ccbb; padding: 20px; border-radius: 10px; text-align: center;">
+      <h2 style="color: black;">Congratulations!</h2>
+      <p style="color: black;">You have successfully collected all the crystals and won the level!</p>
+      
+      <!-- Proceed Button -->
+       <a href="./level3.html">
+      <button id="proceedButton" style="margin-top: 20px; padding: 10px 20px; background-color: black; color: rgb(197, 0, 184); border: none; border-radius: 5px; cursor: pointer;">
+        Proceed to Next Level
+      </button>
+      </a>
+    </div>
+  </div>
+
     <div id="exitMenu">
         <h2>Are you sure?</h2>
         <button id="mainMenuButton">Main Menu</button>
         <button id="restartButton">Restart Level</button>
     </div>
-
-    
 
     <!-- You Died Message -->
     <div id="deathMessage">
