--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
       <br>Toilet paper by Poly by Google [CC-BY] via Poly Pizza renamed as Toilet_paper
       <br>Rock Forms 3 by S. Paul Michael [CC-BY] via Poly Pizza
       <br>Flying saucer by Poly by Google [CC-BY] via Poly Pizza renamed as Flying_saucer
+      <br>"Animated Floating Astronaut in Space Suit Loop" (https://skfb.ly/o9pPT) by LasquetiSpice is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
+      <br>cat meow by tuberatanka -- https://freesound.org/s/110011/ -- License: Creative Commons 0
     </p>
 
 
