--- a/level3.html
+++ b/level3.html
@@ -229,7 +229,7 @@
 
 
     <!-- Import Three.js -->
-     <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script>
+     <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.142.0/build/three.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
    
@@ -237,7 +237,7 @@
 
     <!-- Import your custom JavaScript file -->
     <script type = "module" src = "/level3Intro.js"> </script>
-    <script type="module" src="level3.js"></script>
+    <!-- <script type="module" src="level3.js"></script> -->
     <script type = "module" src = "/inventory.js"> </script>
    
     
