--- a/level2.html
+++ b/level2.html
@@ -239,15 +239,12 @@
     </div>
   </div>
 
-        <!-- Exit Menu -->
-        <div id="exitMenu">
-            <h2>Astral Meow-nu</h2>
-            <button id="mainMenuButton">Main Menu</button>
-            <button id="restartButton">Restart Level</button>
-            <label for="volumeControl">Music Volume:</label>
-            <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5">
-        </div>
-    
+    <div id="exitMenu">
+        <h2>Are you sure?</h2>
+        <button id="mainMenuButton">Main Menu</button>
+        <button id="restartButton">Restart Level</button>
+    </div>
+
     <!-- You Died Message -->
     <div id="deathMessage">
         <h2>You Suffocated!</h2>
