--- a/level3.html
+++ b/level3.html
@@ -205,10 +205,13 @@ canvas {
 
     <span id = "inventoryFull"></span>
 
+    <!-- Exit Menu -->
     <div id="exitMenu">
-        <h2>Are you sure?</h2>
+        <h2>Astral Meow-nu</h2>
         <button id="mainMenuButton">Main Menu</button>
         <button id="restartButton">Restart Level</button>
+        <label for="volumeControl">Music Volume:</label>
+        <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5">
     </div>
 
     <!-- You Died Message -->
