--- a/level3.html
+++ b/level3.html
@@ -86,14 +86,42 @@ canvas {
             z-index: 5;
         }
 
+        #codeInputContainer{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border: 3px outset #7229a3;
+            border-radius: 5px;
+            box-shadow: 10px 5px 5px #7229a3;
+            background-color: black;
+        }
+
+        #codeInput{
+            margin: 15px;
+            border: 1px solid #7229a3;
+            border-radius: 10px;
+            font-size: 15px;
+            padding: 5px;
+        }
+
+        #winCheck{
+            width: 100px;
+            margin-bottom: 5px;
+            background-color: #ad42f5;
+            border: 2px solid #7229a3;
+            margin: 10px;
+            border-radius: 10px;
+            padding: 3px;
+            font-size: 15px;
+        }
+
         #closeModal2 {
             cursor: pointer;
             color: red;
             font-size: 20px;
             margin: 10px;
         }
-
-
 
         #catConversation {
     overflow: hidden;
@@ -225,6 +253,13 @@ canvas {
 <div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center;">
     <p>Loading assets, please wait...</p>
 </div>
+
+<!--For Code Input-->
+<div id="codeInputContainer" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+    <input type="text" id="codeInput" placeholder="Enter Code" />
+    <button id="winCheck">Check</button>
+</div>
+
 
 
 <div id="introScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: black; color: white; z-index: 10; display: flex; justify-content: center; align-items: center;">
