--- a/game.html
+++ b/game.html
@@ -268,6 +268,7 @@
     </div>
     
     <div id="loadingScreen" style="display: none; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.9); color: white; z-index: 20; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+        <img src="Graphics/WeAreOnTheMoon.png" alt="roadmaptothemoon" width="1000">
         <p>Loading assets, please wait...</p>
         <div id="loadingSpinner" style="width: 40px; height: 40px; border: 5px solid #444; border-top: 5px solid #ba03fc; border-radius: 50%; margin-top: 10px; animation: spin 3s linear infinite;"></div>
     </div>
