--- a/credits.html
+++ b/credits.html
@@ -85,6 +85,7 @@
     </p>
     <p>
       <br>All our music and sound effects are royalty-free from [PixaBay](https://pixabay.com)
+      <br>Epilogue- Calm Ambient Sound Effect by <a href="https://pixabay.com/users/samuelfjohanns-1207793/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=7540">Samuel F. Johanns</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=7540">Pixabay</a>
       <br>cat meow by tuberatanka -- https://freesound.org/s/110011/ -- License: Creative Commons 0
     </p>
     <p>Imported Models:
