--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
       <li>Left mouse click - To select objects</li>
       <li>Right mouse click and drag - Look around the map</li>
       <li>V - Change perspective</li>
+      <li>E - Interact with objects in first person perspective</li>
+      <li>X - Close object popups in first person perspective</li>
+      <li>1 - Add items to inventory in first person perspective</li>
     </ul>
   </div>
 
