--- a/credits.html
+++ b/credits.html
@@ -87,6 +87,8 @@
       <br>All our music and sound effects are royalty-free from [PixaBay](https://pixabay.com)
       <br>Epilogue- Calm Ambient Sound Effect by <a href="https://pixabay.com/users/samuelfjohanns-1207793/?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=7540">Samuel F. Johanns</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=music&utm_content=7540">Pixabay</a>
       <br>cat meow by tuberatanka -- https://freesound.org/s/110011/ -- License: Creative Commons 0
+      <br> Mars texture from solarsystemscope.com
+      
     </p>
     <p>Imported Models:
       <br>The barrel model by by `TextureCan.com` under the Creative Commons CC0 1.0 Universe License Available at: https://www.texturecan.com/models/details/528/#google_vignette
